<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home"
            android:iconTint="#fff"
            />



        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/menu_cart"
            android:iconTint="#fff"
            />

        <item
            android:id="@+id/nav_favorit"
            android:icon="@drawable/star"
            android:title="@string/menu_favorit"
            android:iconTint="#fff"
            />


        <item
            android:id="@+id/nav_resturants"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_resturants"
            android:iconTint="#fff"
            />


        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/applogo"
            android:title="@string/menu_shopping"
            android:iconTint="#E53935"
            />

        <item
            android:id="@+id/action_discover"
            android:icon="@drawable/location"
            android:title="@string/menu_location"
            android:iconTint="#fff"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_setting"
            android:iconTint="#fff"

            />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"
            android:iconTint="#fff"

            />
    </group>
</menu>