<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/action_discover"
        android:orderInCategory="100"
        android:icon="@drawable/location"
        app:showAsAction="ifRoom"
        android:title="@string/menu_discover"/>

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/star"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/menu_favorite" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/user"
        app:showAsAction="ifRoom"
        android:title="@string/menu_profile"/>
</menu>
