<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shopping.Buyers.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shopping.Buyers.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />



    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.shopping.Buyers.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting"
        />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.shopping.Buyers.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout"
        />

   <!-- <fragment
        android:id="@+id/nav_resturants"
        android:name="com.example.shopping.Buyers.homeapp.HomeAppFragment"
        android:label="@string/menu_resturants"
        tools:layout="@layout/activity_home_app_fragment"
        />-->

    <fragment
        android:id="@+id/nav_resturants"
        android:label="@string/menu_resturants"
        android:name="com.example.shopping.Buyers.cart.CartFragment"
        tools:layout="@layout/fragment_cart"
        />

</navigation>