<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_rest"
        android:orderInCategory="100"
        android:title="Search"
        app:showAsAction="always"
        tools:ignore="HardcodedText" />


    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/star"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_favorite" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/user"
        app:showAsAction="never"
        android:title="@string/menu_profile"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings_title"
        app:showAsAction="never" />
</menu>
