<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/ic_baseline_search_24"
            app:showAsAction="always"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />


        <item
            android:id="@+id/action_notifications"
            android:title="@string/notifications_title"
            android:icon="@drawable/ic_notifications_black_24dp"
            app:showAsAction="always"/>


        <item
            android:id="@+id/action_settings"
            android:title="@string/settings_title"
            android:icon="@drawable/ic_settings_black_24dp"
            app:showAsAction="collapseActionView"/>

        <item
            android:id="@+id/action_payments"
            android:icon="@drawable/badge_circle"
            android:title="payments"
            app:showAsAction="always"/>

</menu>