<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_home"
    >


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shopping.Sellers.ui.HomeSeller.HomeSellerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_seller_home"
        />




    <activity
        android:id="@+id/navigation_add"
        android:name="com.example.shopping.Sellers.SellerProductCategoryActivity"
        android:label="@string/title_add"
        tools:layout="@layout/activity_seller_product_category"
        />


    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.example.shopping.Sellers.ui.LogoutSeller.LogoutSellerFragment"
        android:label="@string/title_logout"
        tools:layout="@layout/fragment_seller_logout"
        />


</navigation>